infrastructure/overlays/prod/Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: scdb-gateway
  namespace: default
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      hostname: "*.prod.home.dblanchet.net"
      allowedRoutes:
        namespaces:
          from: All
#    - name: tls-prod-argocd
#      protocol: TLS
#      port: 8443
#      hostname: "*.prod.home.dblanchet.net"
#      tls:
#        mode: Passthrough
#      allowedRoutes:
#        namespaces:
#          from: All
    - name: https-test-web
      protocol: HTTPS
      port: 8443
      hostname: test-web.prod.home.dblanchet.net
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: test-web-prod-ssl
            namespace: test
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: test
    - name: https-prod-webts
      protocol: HTTPS
      port: 8443
      hostname: webts.prod.home.dblanchet.net
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: webts-web-prod-ssl
            namespace: webts
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: webts
    - name: https-prod-crypto-scdb
      protocol: HTTPS
      port: 8443
      hostname: crypto-scdb.prod.home.dblanchet.net
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: crypto-scdb-prod-ssl
            namespace: crypto-trader
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: crypto-trader
    - name: https-prod-harbor
      protocol: HTTPS
      port: 8443
      hostname: harbor.prod.home.dblanchet.net
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: harbor-ingress
            namespace: harbor
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: harbor
    - name: https-prod-argocd
      protocol: HTTPS
      port: 8443
      hostname: argocd.prod.home.dblanchet.net
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: argocd-prod-tls
            namespace: argocd
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
    - name: https-prod-homebridge
      protocol: HTTPS
      port: 8443
      hostname: homebridge.prod.home.dblanchet.net
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: homebridge-prod-ssl
            namespace: homebridge
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: homebridge
